# env_monitor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
io/: CMakeLists.txt
io/src/: io.c
lwip_include/: lwipopts.h
mcu_internal/: CMakeLists.txt
mcu_internal/include/: config.h  io.h
mcu_internal/src/: config.c  io.c
network/: CMakeLists.txt
network/content/: index.shtml  setup_err.shtml  setup_ok.shtml
network/include/: access_point.h  lwipopts.h  mqtt_client.h  webserver.h  wifi.h
network/src/: access_point.c  dhcpserver.c  mqtt_client.c  webserver.c  wifi.c
sensing/: CMakeLists.txt
sensing/include/: sensing.h
sensing/src/: sensing.c
server/: docker-compose.yml
server/config/influxdb/: influxdb.conf
server/config/mosquitto/: mosquitto.conf
webserver/: CMakeLists.txt
webserver/content/: wifi_cred_err.shtml  wifi_cred_ok.shtml
webserver/include/: webserver.h
webserver/src/: webserver.c
